[gd_scene load_steps=6 format=3 uid="uid://b65jl10fhmhtv"]

[ext_resource type="Texture2D" uid="uid://crtm811rfjxvj" path="res://Sprites/Objekts/Ores/RareOrs/RareOreC2.png" id="1_7nqra"]
[ext_resource type="Script" path="res://Nodes/Objekts/Ores/RareOre.gd" id="2_n4tyh"]
[ext_resource type="Texture2D" uid="uid://bm2p4u6tg8bab" path="res://Sprites/Objekts/Ores/HPBarBottom.png" id="3_trnw7"]
[ext_resource type="Texture2D" uid="uid://bqckq4fquf3ks" path="res://Sprites/Objekts/Ores/HPBarTop.png" id="4_tr1hj"]
[ext_resource type="Texture2D" uid="uid://dci1g67squfyb" path="res://Sprites/Objekts/Ores/HPBarBar.png" id="5_opc16"]

[node name="RareOre" type="StaticBody2D"]
script = ExtResource("2_n4tyh")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox"]
polygon = PackedVector2Array(-5, 0, -5, -2, -4, -2, -4, -1, -2, -1, -2, -2, 0, -2, 0, -1, 3, -1, 3, 0, 4, 0, 4, 2, 5, 2, 5, 3, 4, 3, 4, 4, 3, 4, 3, 5, -3, 5, -3, 4, -4, 4, -4, 3, -5, 3, -5, 2, -4, 2, -4, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, 4, -3, 4, -3, 5, 3, 5, 3, 4, 4, 4, 4, 3, 5, 3, 5, 2, 4, 2, 4, 0, 3, 0, 3, -1, 0, -1, 0, -2, -2, -2, -2, -1, -4, -1, -4, -2, -5, -2, -5, 0, -4, 0, -4, 2, -5, 2, -5, 3, -4, 3)

[node name="RareOre" type="Sprite2D" parent="."]
texture = ExtResource("1_7nqra")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -9.5
offset_top = -7.0
offset_right = 374.5
offset_bottom = 89.0
scale = Vector2(0.05, 0.05)
value = 100.0
fill_mode = 1
texture_under = ExtResource("3_trnw7")
texture_over = ExtResource("4_tr1hj")
texture_progress = ExtResource("5_opc16")

[node name="Label" type="Label" parent="TextureProgressBar"]
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 30.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "100"

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="HurtBox" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="HurtBox" to="." method="_on_area_2d_mouse_exited"]
[connection signal="tree_entered" from="RareOre" to="." method="_on_rare_ore_tree_entered"]
